@@ -638,7 +638,11 @@ verify_test(void)
 		/* Allow the use of SHA1 signatures for the test,
 		 * in case that OpenSSL disallows use of RSASHA1
 		 * with rh-allow-sha1-signatures disabled. */
+#ifndef UB_ON_WINDOWS
 		setenv("OPENSSL_ENABLE_SHA1_SIGNATURES", "1", 0);
+#else
+		_putenv("OPENSSL_ENABLE_SHA1_SIGNATURES=1");
+#endif
 	}
 #endif
 
