@@ -1,5 +1,6 @@
 22 August 2025: Wouter
 	- For #1318: Fix compile warnings for DoH compile on windows.
+	- Fix sha1 enable environment variable in test code on windows.
 
 21 August 2025: Wouter
 	- Fix to check for extraneous command arguments for unbound-control,
